[project]
name = "comfyui-search-navigation"
description = "Search navigation extension."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/christian-byrne/comfyui-search-navigation"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-search-navigation"
Icon = ""
