[project]
name = "comfyui-search-navigation"
description = "Navigate workflows faster using keyboard. Shift+F to open/close. Shift+Left/Right to cycle through search history."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/christian-byrne/comfyui-search-navigation"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "christian-byrne"
DisplayName = "comfyui-search-navigation"
Icon = "https://img.icons8.com/?size=100&id=112468&format=png&color=000000"
